# collatz

./: .replit  Cargo.toml
src/: main.rs
